style: fix log rendering on Safari

--- a/webui/react/src/App.module.scss
+++ b/webui/react/src/App.module.scss
@@ -18,5 +18,5 @@
   }
 }
 .noChrome {
-  .body > *:last-child { height: 100%; }
+  .body > *:last-child { height: 100vh; }
 }
